[package]
name = "quo-client-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
quo-common = { path = "./quo-common" }
leptos-use = { version = "0.18.0", features = ["storage"] }
codee = { version = "0.3.5", features = ["json_serde"] }

[workspace]
members = ["quo","quo-common", "src-tauri"]
