[package]
name = "quo-client-ui"
version = "0.1.0"
edition = "2021"
license = "GPL-3"
authors = ["Protoqol <open-source@protoqol.nl"]

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
quo-common = { path = "./quo-common" }
leptos-use = { version = "0.18.0", features = ["storage", "use_clipboard"] }
codee = { version = "0.3.5", features = ["json_serde"] }
chrono = { version = "0.4.44", features = ["alloc", "unstable-locales"] }
gloo-timers = "0.3.0"
itertools = "0.14.0"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
rust-format = "0.3"

[workspace]
members = ["quo-common", "quo", "src-tauri"]
