[package]
name = "quo-client"
version = "0.1.0"
description = "Quo debugger"
edition = "2021"
authors = ["Protoqol <open-source@protoqol.nl"]
license = "GPL-3"

[lib]
name = "quo_debugging_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
port_check = "0.3.0"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
quo-common = { path = "../quo-common" }

[dev-dependencies]
quo = { version = "0.1.7", package = "quo-rust" }
